[package]
name = "rustssm"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
aws-config = "1"
aws-sdk-ssm = "1"
aws-sdk-ec2 = "1"
configparser = "3.0"
skim = { version = "0.15.7", default-features = false, features = ["cli"] }
webbrowser = "0.8"
dirs-next = "2.0"
aws-types = "1.3.3"
