[package]
name = "rustssm"
version = "0.1.0"
edition = "2021"
authors = ["David Webster <dwebster182@gmail.com>"]
description = "A cli binary for interacting with session manager."
license = "MIT"
repository = "https://github.com/davidwebstar34/rustssm"
homepage = "https://github.com/davidwebstar34/rustssm"
keywords = ["aws", "ssm", "rust"]

[dependencies]
tokio = { version = "1", features = ["full"] }
aws-config = "1"
aws-sdk-ssm = "1"
aws-sdk-ec2 = "1"
configparser = "3.0"
webbrowser = "0.8"
dirs-next = "2.0"
aws-types = "1.3.3"
serde_json = "1.0.140"
inquire = "0.7"
